2000-06-05 19:50 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>

   * source/pp/ppcore.c
     * Changed hb_pp_SetRules() to only always default to .CH extension, if file name supplied without extension.
     ! Converted some printf() messages to standard warnnings and errors.

   * include/hberrors.h
     + Added:
		#define HB_PP_ERR_CANNOT_OPEN_RULES             15
		#define HB_COMP_ERR_BAD_RULES_FILE_NAME         16

		#define HB_PP_WARN_NO_DIRECTIVES                2

2000-06-07 22:42 UTC+0200 JFl&RaC <jfl@mafact.com>,<rac@mafact.com>

 * harbour/source/vm/classes.c
  -Major modification regarding superobject access
   Now the call to a super object return really one super object instance
  -Major modification regarding access to inherited data (see Maurilio case)
  -Auto inheritance of tObject
  -Minors modification regarding scoping and one block not released (see Antonio's test)

2000-06-07 21:51 UTC+0100 Lubos Janica <janica@fornax.sk>
    * source/rdd/dbfntx1.c
     Begin of implementation ntx driver. It's not working !
       + static ERRCODE ntxOrderCreate( AREAP pArea, LPDBORDERCREATEINFO pOrderInfo );
       + static ERRCODE ntxOrderInfo( AREAP pArea, USHORT uiIndex, LPDBORDERINFO pInfo );
       + static ERRCODE ntxOrderListAdd( AREAP pArea, LPDBORDERINFO pOrderInfo );
       + static ERRCODE ntxOrderListClear( AREAP pArea );
       + static ERRCODE ntxClose( AREAP pArea );
       + some internal funcitons

2000-06-07 16:50 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbcomp.c
        *fixed garbage data at the end of line reported by GCC
        Ron - please check if it is correct
        (YYLSP_NEEDED versus YYLSP_)

2000-06-06 20:10 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>

    * source/compiler/cmdcheck.c
      + Implemented support for -m

    * include/hbcomp.h
      + Added structure _HARBVARS to hold Harbour Session Variables
      + Added structure +AUTOOPEN to hold names of external modules already compiled.
